--- a/blasterjs.html
+++ b/blasterjs.html
@@ -12,7 +12,7 @@
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
         </a>
         <div class="row">
-            <div class="small-11 small-centered medium-5 medium-centered columns">
+            <div class="small-11 small-centered medium-7 medium-centered columns">
                 <div class="row">
                     <div class="small-12 columns text-center">
                         <h1>Blasterjs</h1>
@@ -23,7 +23,7 @@
                         <div class="button success expand tiny round"><span id="score">0</span> pts</div>
                     </div>
                     <div class="small-6 columns text-right">
-                        <div class="button secondary expand tiny round"><span id="moves">0</span> moves</div>
+                        <a class="button tiny round" role="new-game">New game</a>
                     </div>
                 </div>
                 <div class="row">
@@ -33,11 +33,6 @@
                         <div class="end-game"></div>
                     </div>
                     <!-- #Here comes the game -->
-                </div>
-                <div class="row">
-                    <div class="small-12 columns text-center">
-                        <a class="button small round" role="new-game">New game</a>
-                    </div>
                 </div>
                 <div class="row">
                     <div class="small-12 columns text-center">
