--- a/blasterjs.html
+++ b/blasterjs.html
@@ -50,6 +50,6 @@
         </div>
     </body>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.touchSwipe.min.js"></script>
+    <!--<script src="js/jquery.touchSwipe.min.js"></script>-->
     <script src="js/blasterjs.min.js"></script>
 </html>
