Layout and set the goal

--- a/blasterjs.html
+++ b/blasterjs.html
@@ -19,24 +19,36 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="small-12 medium-12 large-8 columns">
+                    <div class="small-12 medium-12 large-6 large-centered columns text-right">
+                        <a class="button tiny round" role="new-game">New game</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="small-12 medium-12 large-6 large-centered columns">
+                        <div class="power-lvl-content">Laser level<div class="power-lvl"></div></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="small-12 medium-12 large-6 large-centered columns">
                         <div class="row">
                             <!-- Here comes the game -->
                             <div id="game-wrapper">
-                                <div class="small-12 columns" id="grid-wrapper"></div>
-                                <div class="end-game"></div>
+                                <div class="small-12 columns">
+                                    <div id="grid-wrapper"></div>
+                                    <div class="end-game"></div>
+                                </div>
                             </div>
                             <!-- #Here comes the game -->
                         </div>
                     </div>
-                    <div class="small-12 medium-12 large-4 columns">
+                </div>
+                <div class="row">
+                    <div class="small-12 medium-12 large-4 large-centered columns">
                         <div class="row">
                             <div class="small-6 columns">
-                                <div class="button success expand tiny round"><span id="score">0</span> pts</div>
+                                
                             </div>
-                            <div class="small-6 columns text-right">
-                                <a class="button tiny round" role="new-game">New game</a>
-                            </div>
+                            
                         </div>
                         <div class="row">
                             <div class="small-12 columns text-center">
@@ -45,7 +57,7 @@
                         </div>
                         <div class="row">
                             <div class="small-12 columns text-center">
-                                <span class="label secondary radius">Use your arrow keys to play</span>
+                                <span class="label secondary radius">Use your arrow keys to move<br>and the spacebar to fire</span>
                             </div>
                         </div>
                     </div>
