--- a/blasterjs.html
+++ b/blasterjs.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/blasterjs.min.css" />
     </head>
     <body>
-        <a href="https://github.com/JeromeClerc/2048js">
+        <a href="https://github.com/JeromeClerc/Blasterjs">
             <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
         </a>
         <div class="row">
@@ -24,8 +24,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="small-12 medium-12 large-6 large-centered columns">
-                        <div class="power-lvl-content">Laser level<div class="power-lvl"></div></div>
+                    <div class="small-12 medium-12 large-6 large-centered columns text-center">
+                        <div class="power-lvl-content"><span class="power-lvl-txt"></span><div class="power-lvl"></div></div>
                     </div>
                 </div>
                 <div class="row">
@@ -34,7 +34,9 @@
                             <!-- Here comes the game -->
                             <div id="game-wrapper">
                                 <div class="small-12 columns">
-                                    <div id="grid-wrapper"></div>
+                                    <div id="grid-wrapper">
+                                        
+                                    </div>
                                     <div class="end-game"></div>
                                 </div>
                             </div>
@@ -68,6 +70,5 @@
         </div>
     </body>
     <script src="js/jquery.min.js"></script>
-    <!--<script src="js/jquery.touchSwipe.min.js"></script>-->
     <script src="js/blasterjs.min.js"></script>
 </html>
